Use ndv values when determine preferred DF timeout